tests/semantic/invalid/09_invalid_main_3.tc
// 非法测试9: main函数签名错误
// 目标：应报错 SEM_INVALID_MAIN_SIGNATURE

// 错误3: main有参数且返回void
void main(int x) {
    return;
}
